--- a/.github/workflows/main_procesos-service.yml
+++ b/.github/workflows/main_procesos-service.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }} # Reemplaza estos con tus secretos de cliente/tenant/sub
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # <-- ¡Esta línea es clave!
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
