--- a/.github/workflows/main_backendauth.yml
+++ b/.github/workflows/main_backendauth.yml
@@ -62,12 +62,10 @@ jobs:
         run: unzip release.zip
       
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v2 # O @v1, ya que 'creds' funciona con ambas
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} 
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }} 
+          auth-type: 'SPN' 
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
