--- a/.github/workflows/main_procesos-service.yml
+++ b/.github/workflows/main_procesos-service.yml
@@ -62,13 +62,11 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }} # <-- ¡Esta línea es clave!
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - - name: Login to Azure
+          uses: azure/login@v2
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+            auth-type: 'SERVICE_PRINCIPAL' # <-- ¡CORREGIDO! Cambia 'SPN' por 'SERVICE_PRINCIPAL'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
