--- a/.github/workflows/main_procesos-service.yml
+++ b/.github/workflows/main_procesos-service.yml
@@ -62,11 +62,11 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - - name: Login to Azure
-          uses: azure/login@v2
-          with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
-            auth-type: 'SERVICE_PRINCIPAL' # <-- ¡CORREGIDO! Cambia 'SPN' por 'SERVICE_PRINCIPAL'
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          auth-type: 'SERVICE_PRINCIPAL' # <-- ¡CORREGIDO! Cambia 'SPN' por 'SERVICE_PRINCIPAL'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
