--- a/gestor-procesos-frontend/package.json
+++ b/gestor-procesos-frontend/package.json
@@ -29,9 +29,9 @@
       "REACT_APP_PROCESOS_API_URL": "http://localhost:3003"
     },
     "production": {
-      "REACT_APP_AUTH_API_URL": "backendauth-afdgfwaxdwaddkdw.eastus2-01.azurewebsites.net",
-      "REACT_APP_SOLICITUDES_API_URL": "solicitudes-service-gsc7fte3fnfucncz.eastus2-01.azurewebsites.net",
-      "REACT_APP_PROCESOS_API_URL": "procesos-service-fbdyh0hqd4hsefgk.eastus2-01.azurewebsites.net"
+      "REACT_APP_AUTH_API_URL": "https://backendauth-afdgfwaxdwaddkdw.eastus2-01.azurewebsites.net/",
+      "REACT_APP_SOLICITUDES_API_URL": "https://solicitudes-service-gsc7fte3fnfucncz.eastus2-01.azurewebsites.net/",
+      "REACT_APP_PROCESOS_API_URL": "https://procesos-service-fbdyh0hqd4hsefgk.eastus2-01.azurewebsites.net/"
     }
   },
   "eslintConfig": {
